--- a/frontend/src/app/page.module.scss
+++ b/frontend/src/app/page.module.scss
@@ -39,7 +39,7 @@ $rosebackground: #FDC5C6;
         font-weight: 200;
         margin-bottom: 30px;
         font-style: italic;
-        color:#FFF;
+        color: #FFF;
       }
 
       h2 {
@@ -73,9 +73,115 @@ $rosebackground: #FDC5C6;
         }
       }
     }
-    .registerForm{
+
+    .registerForm {
       width: 90%;
+    }
+
+  }
+}
+
+@media (max-width:960px) {
+  .homePage {
+    // font-smooth: none;
+    // width: 100vw;
+    // background-image: url(../../public/img/bg.jpg);
+    // background-size: cover;
+    // background-position: center;
+    padding: 20px;
+    // display: flex;
+    // border: 6px solid red;
+
+    .homeContainer {
+      // display: flex;
+      flex-direction: column;
+      // align-items: center;
+      // border-radius: 10px;
+      // min-width: 70%;
+      // overflow: hidden;
+      // box-shadow: 5px 5px 20px 5px #00000027;
+      // text-align: center;
+      padding: 10px 0;
+
+      section.welcome {
+        // height: 100%;
+        // min-width: 35%;
+        // text-align: center;
+        background: none;
+        color: #000;
+        padding: 10px;
+        font-weight: 600;
+
+        h1 {
+          // font-size: 2em;
+          padding: 30px 0;
+        }
+
+        .slogan {
+          // font-weight: 200;
+          // margin-bottom: 30px;
+          // font-style: italic;
+          color: #000;
+        }
+
+        h2 {
+          // margin-top: 20px;
+        }
+
+        p {
+          // padding: 5px 0 40px 0;
+          // font-weight: 200;
+        }
+
+        .btnToEnter {
+          // padding: 7px 50px;
+          // border-radius: 30px;
+          // font-weight: 500;
+          // color: #FFF;
+          // border: 1px solid #FFF;
+          // background-color: $darkgreen;
+          // align-self: stretch;
+          // justify-self: stretch;
+          // cursor: pointer;
+        }
+
+        .forgotPassword {
+          margin: 10px 0;
+          // cursor: pointer;
+          // font-weight: 200;
+
+          &:hover {
+            // transform: scale(1.01);
+          }
+        }
       }
 
+      .registerForm {
+        // background-color: red;
+        background-color: $darkgreen;
+        border-radius: 10px;
+        color: #FFF;
+
+
+
+        // width: 90%;
+        h1 {
+          margin-top: 30px;
+          margin-bottom: 0;
+
+
+        }
+
+        .formRegisterContainer {
+          // border: 1px solid black;
+          padding: 5px 10px;
+
+          input {
+            padding-top: 0;
+          }
+        }
+      }
+
+    }
   }
 }
