--- a/frontend/src/app/(resetPassword)/reset-password/reset.module.scss
+++ b/frontend/src/app/(resetPassword)/reset-password/reset.module.scss
@@ -21,3 +21,18 @@
         // border: 1px solid yellow;
     }
 }
+
+@media (max-width: 720px) {
+    .formRecoverContainer {
+
+        padding: 10px;
+
+        form {
+            width: 90%;
+
+            gap: 5px;
+            padding: 10px;
+
+        }
+    }
+}
