--- a/frontend/src/app/(resetPassword)/send-confirmation-code/sendConfirmationCode.module.scss
+++ b/frontend/src/app/(resetPassword)/send-confirmation-code/sendConfirmationCode.module.scss
@@ -1,5 +1,4 @@
 .formRecoverContainer {
-    // border: 1px solid red;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,9 +14,17 @@
         width: 40%;
         display: flex;
         flex-direction: column;
-        // gap: 10px;
         padding: 20px;
         color: #FFF;
-        // border: 1px solid yellow;
+    }
+}
+@media (max-width:720px){
+    .formRecoverContainer {
+        padding: 10px;
+    
+        form {
+            width: 90%;
+            
+        }
     }
 }
